fixed type spacing

--- a/css/main.css
+++ b/css/main.css
@@ -614,7 +614,7 @@ p,
     font-family: Benton,Helvetica,Arial,sans-serif;
     font-size: 15px;
     font-weight: 400;
-    line-height: 1.4;
+    line-height: 1.3;
     width: 100%;
     height: auto;    
 }
@@ -645,7 +645,7 @@ p,
 
 .covVir-interactiveTime {
     display: inline-block;
-    margin: 16px 0 0 0;
+    margin: 12px 0 0 0;
     font-family: Benton,Helvetica,Arial,sans-serif;
     font-size: 10px;
     font-weight: 400;
